[package]
name = "gtk4_glium"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Use Gtk4 and Glium together"
homepage = "https://remcokranenburg.com"
repository = "https://github.com/remcokranenburg/gtk4-glium"
keywords = ["graphics", "gtk", "opengl", "glium", "gui"]
categories = ["api-bindings", "graphics", "gui", "rendering", "rendering::graphics-api"]

[dependencies]
glib = "0.19.0"
glium = "0.34.0"
gl_loader = "0.1.2"
gtk4 = "0.8.0"

[dev-dependencies]
image = "0.24"